# albumania

./: .gitignore  CLAUDE.md  PLAN.md  README.md  render.yaml
backend/: .cache  .env.example  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 00407f70ab0e_widen_user_description_to_1000.py  0e7e7d365ca1_add_listen_invite_accepted_notification_.py  4ee1b42d7212_add_spotify_top5_to_albums.py  55e71d136ad0_remove_private_profile_visibility.py  9f640281c8b1_add_albums_tracks_baseline_stats.py  a1f3c7d92b04_add_artist_spotify_id_to_albums.py  a7b3f1c98e21_add_friend_dashboard_entries.py  b2d4e6f80a13_add_comments.py  b5d2f4a7e103_add_listen_invites.py  c08ff9961194_add_friendships.py  c3e5a7b91d24_add_friends_profile_visibility.py  c91d27e54b80_add_user_description.py  d4e91c2a87bf_add_profile_picture_key.py  d63cc99c8b3f_add_ratings_song_notes.py  d7f2a4c19e35_add_upc_to_albums.py  e5a1c8d3f902_add_notifications.py  e972c558296c_add_users_table.py  ef275ba19e1c_add_username_to_users.py  f4a2b8d91e07_add_duration_ms_to_album_tracks.py  (+1 more)
backend/app/: main.py
backend/app/core/: deps.py  (+4 more)
backend/scripts/: seed_baselines.py  seed_ratings.py  upload_brand_assets.py
backend/tests/: conftest.py  test_albums.py  test_artists.py  test_auth.py  test_avatar.py  test_comments.py  test_config.py  test_dashboard.py  test_errors.py  test_friend_dashboard.py  test_friendships.py  test_health.py  test_home.py  test_invites.py  test_migrations.py  test_notifications.py  test_ratings.py  test_spotify_errors.py  test_user_comparison.py  test_users.py
(+264 files in other folders)
